zellij-server/src/tab/unit/snapshots/zellij_server__tab__tab_integration_tests__scroll_wheel_up_scrolls_pane.snap
---
source: zellij-server/src/tab/./unit/tab_integration_tests.rs
expression: "format!(\"{}\", snapshot_after)"
---
00 (C): ┌ Pane #1 ─────────────────────────────────────────────────────────────────────────────────────────────── SCROLL:  3/33 ┐
01 (C): │Line 30                                                                                                                │
02 (C): │Line 31                                                                                                                │
03 (C): │Line 32                                                                                                                │
04 (C): │Line 33                                                                                                                │
05 (C): │Line 34                                                                                                                │
06 (C): │Line 35                                                                                                                │
07 (C): │Line 36                                                                                                                │
08 (C): │Line 37                                                                                                                │
09 (C): │Line 38                                                                                                                │
10 (C): │Line 39                                                                                                                │
11 (C): │Line 40                                                                                                                │
12 (C): │Line 41                                                                                                                │
13 (C): │Line 42                                                                                                                │
14 (C): │Line 43                                                                                                                │
15 (C): │Line 44                                                                                                                │
16 (C): │Line 45                                                                                                                │
17 (C): │Line 46                                                                                                                │
18 (C): │Line 47                                                                                                                │
19 (C): └───────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
