zellij-server/src/tab/unit/snapshots/zellij_server__tab__tab_integration_tests__search_tab_highlight_wide_chars.snap
---
source: zellij-server/src/tab/./unit/tab_integration_tests.rs
assertion_line: 3900
expression: snapshot
---
00 (C): ┌ SEARCHING: 🔥 ───────────────────────┐
01 (C): │hello🌍🔥world                        │
02 (C): │                                      │
03 (C): │                                      │
04 (C): └──────────────────────────────────────┘

